2010-03-31  Zhenyao Mo  <zmo@google.com>

        Reviewed by Darin Fisher.

        Hook up WebGLContextAttributes to OpenGL context creation code
        https://bugs.webkit.org/show_bug.cgi?id=33416

        * src/WebGraphicsContext3DDefaultImpl.cpp: Hook up WebGLContextAttributes to OpenGL context creation code for Chrome.
        (WebKit::WebGraphicsContext3DDefaultImpl::WebGraphicsContext3DDefaultImpl):
        (WebKit::WebGraphicsContext3DDefaultImpl::~WebGraphicsContext3DDefaultImpl):
        (WebKit::WebGraphicsContext3DDefaultImpl::initialize):
        (WebKit::WebGraphicsContext3DDefaultImpl::validateAttributes):
        (WebKit::WebGraphicsContext3DDefaultImpl::reshape):
        (WebKit::WebGraphicsContext3DDefaultImpl::readBackFramebuffer):
        (WebKit::WebGraphicsContext3DDefaultImpl::bindFramebuffer):
        (WebKit::WebGraphicsContext3DDefaultImpl::readPixels): Deal with wrong returned alpha values in Mac.
        * src/WebGraphicsContext3DDefaultImpl.h: Add a function.

2010-03-31  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        [chromium] including WebKit.gyp:webkit should automatically add Skia
        and NPAPI include paths

        https://bugs.webkit.org/show_bug.cgi?id=36887

        * WebKit.gyp:

2010-03-31  Marcus Bulach  <bulach@chromium.org>

        Reviewed by Jeremy Orlow.

        Implements cancelGeolocationPermissionRequestForFrame.
        https://bugs.webkit.org/show_bug.cgi?id=35031

        * public/WebGeolocationService.h:
        (WebKit::WebGeolocationService::cancelPermissionRequestForFrame):
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::cancelGeolocationPermissionRequestForFrame):
        * src/ChromeClientImpl.h:

2010-03-31  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed. Rolling out r56829 since it broke chromium layout tests.

        [REGRESSION] Inspector tests started crashing since r56829
        https://bugs.webkit.org/show_bug.cgi?id=36888